--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel public/index.html -d build",
-    "build": "parcel build public/index.html -d build"
+    "build": "parcel build src/index.js -d build"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
